--- a/biblio.bib
+++ b/biblio.bib
@@ -1,8 +1,27 @@
 @misc{scripts,
-  title = {{Gitlab} Scripts },
-  howpublished = {\url{https://gitlab.fing.edu.uy/metnum/MN18tarea1/-/archive/master/MN18tarea1-master.zip}},
+  title = {{SCRIPTS} Euler contra lsode },
+  howpublished = {\url{https://www.fing.edu.uy/owncloud/index.php/s/BSRTwE3wmmjcmoq}},
   note = {Accessed: 2018-9-22}
 }
+
+
+@book{Patrikalakis,
+Author = {Patrikalakis, Nicholas M. and Maekawa, Takashi},
+ISSN = {978-0-444-51104-1},
+Journal = {Shape Interrogation for Computer Aided Design and Manufacturing},
+Pages = {265 - 291},
+Title = {Chapter 10: Geodesics.},
+Publisher={Springer Berlin,Heidelberg, Berlin, Heidelberg}
+year = {2002},
+}
+
+@book{Notas_curso,
+Author = {Instituto de Matem\'aticas y Estad\'istica "Rafael Laguardia"  - Facultad de Ingenier\'ia  - Universidad de la Rep\'ublica
+},
+Pages = {101 - 110},
+Title = {"Apuntes de te\'orico - M\'etodos num\'ericos" Cap\'itulo 6: Ecuaciones Diferenciales.}
+}
+
 
 
 @article{Recoba,
